# qp_planck

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: README.md  changelog.rst  conf.py  configuration.rst  contributing.rst  examples.rst  index.rst  installation.rst  physics_background.rst  quickstart.rst  references.rst  yaml_config.rst
docs/api/: hmap2mat.rst  mat2fits.rst  pipeline.rst  utilities.rst
examples/: Example.ipynb
inputs/RIMOs/: RIMO_LFI_npipe5_symmetrized.fits
inputs/masks/: mask_galplane_fsky20_ns128.fits  mask_galplane_fsky40_ns128.fits  mask_galplane_fsky60_ns128.fits
inputs/polmoments_ns0128/: polmoments_100-1a_hits.fits  polmoments_100-2a_hits.fits  polmoments_100-3a_hits.fits  polmoments_100-4a_hits.fits  polmoments_143-1a_hits.fits  polmoments_143-2a_hits.fits  polmoments_143-3a_hits.fits  polmoments_143-4a_hits.fits  polmoments_143-5_hits.fits  polmoments_143-6_hits.fits  polmoments_143-7_hits.fits
qp_planck/: __init__.py  qp.py  qp2fits.py  qp_hmap2mat.py  qp_mat2fits.py  qp_pipeline.py  utilities.py
scripts/: example_planck.yaml  make_planck_detparis.py
