[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "qp-planck"
version = "0.1.0"
description = "QuickPol-based tools for Planck NPIPE beam window functions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" },
]

# Adjust these if you want to publish to PyPI later
keywords = ["planck", "npipe", "quickpol", "cmb", "cosmology"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]

# Runtime dependencies – tweak versions as needed
dependencies = [
  "numpy>=1.20",
  "scipy>=1.6",
  "astropy>=5.0",
  "healpy>=1.15",
  "matplotlib>=3.9.4",
]

[project.optional-dependencies]
# Optional MPI support
mpi = [
  "mpi4py>=3.0",
]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
]

[project.urls]
homepage = "https://example.com/qp-planck"
repository = "https://example.com/qp-planck.git"

[tool.hatch.build.targets.wheel]
# We’re using the package directory qp_planck/ as-is (no src/ layout)
packages = ["qp_planck"]

[tool.hatch.build.targets.sdist]
include = [
  "qp_planck",
  "README.md",
  "pyproject.toml",
]

[project.scripts]
qp-pipeline = "qp_planck.qp_pipeline:run_cli"
qp-detpairs = "scripts.make_detpairs:main"

[tool.setuptools_scm]
version_file = "qp_planck/_version.py"

[tool.ruff.lint]
select = ["E713", "E703", "E714", "E741", "E10", "E11", "E20", "E22", "E23", "E25", "E262", "E27", "E301", "E302", "E304", "E9", "F405", "F406", "F5", "F6", "F7", "F8", "E501", "W191", "F401", "W1", "W292", "W293", "W3"]
extend-select = ["I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"docs/*" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
exclude = [".tox", "build", "cobaya_packages", "test", ".eggs"]
line-length = 90
preview = true

[tool.coverage.run]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    "except ModuleNotFoundError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "def main\\(.*\\):",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
]
